<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">数字人</string>
    <string name="reference_image">参考图像</string>
    <string name="output_image">输出图像</string>
    <string name="status_ready">引擎就绪</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="permission_camera_required">需要相机权限</string>
    <string name="permission_audio_required">需要麦克风权限</string>
</resources>
